styles.css
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --white: hsl(0, 0%, 100%);
  --light-gray: hsl(212, 45%, 89%);
  --grayish-blue: hsl(220, 15%, 55%);
  --dark-blue: hsl(218, 44%, 22%);
  --deep-dark-blue: hsl(228, 45%, 44%);
}

img {
  max-width: 100%;
  max-height: 100%;
}

body {
  font-family: "Outfit", sans-serif;
  background-color: var(--light-gray);
  display: flex;
  flex-direction: column;
  align-items: center; /* align vertically */
  justify-content: center; /* align horizontally */
  height: calc(100vh - 1px);
  margin: 1.25rem;
}

.container {
  background-color: var(--white);
  max-width: 315px;
  padding: 1rem;
  border-radius: 18px;
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.08);
  margin-bottom: 2rem;
}

.container img {
  border-radius: 8px;
  margin-bottom: 1.3rem;
}

.container h1 {
  color: var(--dark-blue);
  font-size: 1.4rem;
  text-align: center;
  margin-bottom: 1rem;
}

.container p {
  color: var(--grayish-blue);
  text-align: center;
  margin-bottom: 1.5rem;
  /*margin-right: 0.625rem;
  margin-left: 0.625rem; */
}

.attribution {
  position: absolute;
  bottom: 2rem;
  font-size: 12px;
  text-align: center;
}

.attribution a {
  color: var(--deep-dark-blue);
}

